[package]
name = "autoupdater"
description = "Crate for easy autoupdating of rust apps."
authors = ["Kate <work@localcc.cc>"]
keywords = ["autoupdater", "updater", "update"]
homepage = "https://github.com/localcc/autoupdater"
repository = "https://github.com/localcc/autoupdater"
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
regex = "1.6.0"
lazy_static = "1.4.0"
serde = { version = "1.0.41", features = ["derive"] }
tempfile = "3.3.0"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]