[package]
name = "autoupdater"
description = "Crate for easy autoupdating of rust apps."
authors = ["Kate <work@localcc.cc>"]
keywords = ["autoupdater", "updater", "update"]
homepage = "https://github.com/localcc/autoupdater"
repository = "https://github.com/localcc/autoupdater"
readme = "README.md"
license = "MIT"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.4"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
