[package]
name = "autoupdater"
description = "Crate for easy autoupdating of rust apps."
authors = ["Kate <work@localcc.cc>"]
keywords = ["autoupdater", "updater", "update"]
homepage = "https://github.com/localcc/autoupdater"
repository = "https://github.com/localcc/autoupdater"
readme = "README.md"
license = "MIT"
version = "0.3.0"
edition = "2021"

[dependencies]
ureq = { version = "2.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.4"
thiserror = "1.0"
